www: Add dark CSS color scheme, fix WCAG contrast
Add prefers-color-scheme dark modes.

Fix WCAG contrast issues.

Clean up button link styling to be more obviously links.

See https://developer.mozilla.org/en-US/docs/Web/CSS/@media/prefers-color-scheme

--- a/salt/files/server/web/common/www/_common/style/orange/base.css
+++ b/salt/files/server/web/common/www/_common/style/orange/base.css
@@ -2,29 +2,6 @@ body {
 	font-family: 'Open Sans', arial; /* I prefer non-serif fonts */
 }
 
-/* https://stackoverflow.com/questions/248011/how-do-i-wrap-text-in-a-pre-tag */
-pre {
-	white-space: pre-wrap;       /* CSS 3 */
-	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-	white-space: -pre-wrap;      /* Opera 4-6 */
-	white-space: -o-pre-wrap;    /* Opera 7 */
-	word-wrap: break-word;       /* Internet Explorer 5.5+ */
-}
-
-/* Based on Github's <code> tag */
-code {
-	padding-top: 0.4em;
-	padding-bottom: 0.4em;
-	/* Originally 0.2em */
-	padding-left: 0.4em;
-	padding-right: 0.4em;
-	/* Originally unset */
-	margin: 0;
-	font-size: 90%;
-	/* Originally 85% */
-	border-radius: 3px;
-}
-
 /* Responsive wrapper */
 div#wrap {
 	margin-left: auto;
@@ -57,6 +34,29 @@ div#wrap {
 	}
 }
 /* End wrapper */
+
+/* https://stackoverflow.com/questions/248011/how-do-i-wrap-text-in-a-pre-tag */
+pre {
+	white-space: pre-wrap;       /* CSS 3 */
+	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+	white-space: -pre-wrap;      /* Opera 4-6 */
+	white-space: -o-pre-wrap;    /* Opera 7 */
+	word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
+/* Based on Github's <code> tag */
+code {
+	padding-top: 0.4em;
+	padding-bottom: 0.4em;
+	/* Originally 0.2em */
+	padding-left: 0.4em;
+	padding-right: 0.4em;
+	/* Originally unset */
+	margin: 0;
+	/* font-size: 90%; */
+	/* Originally 85% */
+	border-radius: 3px;
+}
 
 div.subtext {
 	padding-left: 0.5em;
@@ -124,33 +124,7 @@ a.link_button {
 	margin: 3px;
 	min-width: 5rem;
 	text-align: center;
-	text-decoration: none;
-}
-
-a.link_button_blue {
-	background-color: #4d90fe;
-	border: 1px solid #3079ed;
-	color: white !important;
-	text-shadow: 0 1px rgba(0, 0, 0, 0.1);
-}
-
-a.link_button_orange {
-	background-color: #fb8c00;
-	border: 1px solid #f57c00;
-	color: white !important;
-	text-shadow: 0 1px rgba(0, 0, 0, 0.1);
-}
-
-a.link_button_gray {
-	background-color: #546e7a;
-	border: 1px solid #455a64;
-	color: white !important;
-	text-shadow: 0 1px rgba(0, 0, 0, 0.1);
-}
-
-a.link_button_light_gray {
-	background-color: #eceff1;
-	border: 1px solid #cfd8dc;
-	color: black !important;
+	/* text-decoration: none; */
+	/* This can make it difficult to tell if it's a button/link when given proper contrast */
 	text-shadow: 0 1px rgba(0, 0, 0, 0.1);
 }
