--- a/salt/files/server/web/common/www/_common/style/orange/base_light.css
+++ b/salt/files/server/web/common/www/_common/style/orange/base_light.css
@@ -1,21 +1,99 @@
+/* Light theme - default/light mode */
 body {
 	background-color: whitesmoke;
 	color: black;
-}
-
-a:link {
-	color: #ba4f0e;
-}
-
-a:visited {
-	color: #953f0b;
 }
 
 div#wrap {
 	background-color: white;
 }
 
+a:link {
+	color: #7f370a;
+}
+
+a:visited {
+	color: #741774;
+}
+
+a.link_button_blue {
+	background-color: #90caf9;
+	border: 1px solid #64b5f6;
+	color: black;
+}
+
+a.link_button_orange {
+	background-color: #ffa726;
+	border: 1px solid #ff9800;
+	color: black;
+}
+
+a.link_button_gray {
+	background-color: #b0bec5;
+	border: 1px solid #90a4ae;
+	color: black;
+}
+
+a.link_button_light_gray {
+	background-color: #eceff1;
+	border: 1px solid #cfd8dc;
+	color: black;
+}
+
+
 code {
 	border:1px solid #eee;
 	background-color: rgba(0,0,0,0.04);
+	/* Originally rgba(0,0,0,0.04) */
+}
+
+
+/* Light theme - dark mode */
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: black;
+		color: #d0d0d0;
+	}
+
+	div#wrap {
+		background-color: #111111;
+	}
+
+	a:link {
+		color: #ff8000;
+	}
+
+	a:visited {
+		color: #ba4f0e;
+	}
+
+	a.link_button_blue {
+		background-color: #0d47a1;
+		border: 1px solid #002171;
+		color: white;
+	}
+
+	a.link_button_orange {
+		background-color: #852800;
+		border: 1px solid #541800;
+		color: white;
+	}
+
+	a.link_button_gray {
+		background-color: #37474f;
+		border: 1px solid #263238;
+		color: white;
+	}
+
+	a.link_button_light_gray {
+		background-color: #424242;
+		border: 1px solid #212121;
+		color: white;
+	}
+
+	code {
+		border:1px solid #1212;
+		background-color: rgba(0,0,0,0.5);
+		/* Originally rgba(255,255,255,0.08); */
+	}
 }
